--- a/source/Task3/index.html
+++ b/source/Task3/index.html
@@ -6,22 +6,22 @@
   <title>ICP 2 - Task 3</title>
 </head>
 <body>
-<div class="flex_container">
-  <div class="flex_item" style="background: purple"></div>
-  <div class="flex_item" style="background: salmon"></div>
-  <div class="flex_item" style="background: violet"></div>
+<div class="grid">
+  <div class="g" style="background: violet"></div>
+  <div class="g" style="background: purple"></div>
+  <div class="g" style="background: salmon"></div>
 </div>
 
-<div class="flex_container">
-  <div class="flex_item" style="background: magenta"></div>
-  <div class="flex_item" style="background: cyan"></div>
-  <div class="flex_item" style="background: orange"></div>
+<div class="grid">
+  <div class="g" style="background: magenta"></div>
+  <div class="g" style="background: cyan"></div>
+  <div class="g" style="background: orange"></div>
 </div>
 
-<div class="flex_container">
-  <div class="flex_item" style="background: blue"></div>
-  <div class="flex_item" style="background: green"></div>
-  <div class="flex_item" style="background: yellow"></div>
+<div class="grid">
+  <div class="g" style="background: blue"></div>
+  <div class="g" style="background: green"></div>
+  <div class="g" style="background: yellow"></div>
 </div>
 </body>
 </html>
