--- a/source/Task3/index.html
+++ b/source/Task3/index.html
@@ -6,6 +6,7 @@
   <title>ICP 2 - Task 3</title>
 </head>
 <body>
+<!-- below I have used div as well as span elements, the grids are of different colors -->
 <div class="grid">
   <div class="g" style="background: violet"></div>
   <div class="g" style="background: purple"></div>
