--- a/source/Task2/index.html
+++ b/source/Task2/index.html
@@ -26,6 +26,8 @@
                 alt="Speech icon"
                 src="https://lh5.googleusercontent.com/OorCLDb2xlVQ4P2MDNCiwAnpv0K1ZrcDwEwRS3sOfDMrnYTnVPvCh7WtFQMbZ_S9u_jzcSLd8g=s128-h128-e365"></a>
     </div>
+
+    <!--    This block is to display all the recent tabs browsed-->
     <div>
         <div class="flex-container">
             <div class="flex-item">
@@ -48,6 +50,8 @@
             </div>
         </div>
         <br>
+
+    <!--    This block is to display all the recent tabs browsed-->
         <div class="flex-container">
             <div class="flex-item">
                 <a href="https://www.umkc.edu" target="_blank">
